test/corpus/real_world_mine.txt
==================
Mine home config
==================

# {
#     acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
# }


dell.proxmox.opa-oz.live {
    tls opaozhub@gmail.com {
        # https://caddy.community/t/how-to-guide-caddy-v2-cloudflare-dns-01-via-docker/8007
        dns cloudflare {env.CLOUDFLARE_TOKEN}
        resolvers 1.1.1.1
    }

    reverse_proxy https://192.168.0.101:8006 {
        transport http {
            tls_insecure_skip_verify
        }
    }
}

big-boy.proxmox.opa-oz.live {
    tls opaozhub@gmail.com {
        dns cloudflare {env.CLOUDFLARE_TOKEN}
        resolvers 1.1.1.1
    }

    reverse_proxy https://192.168.0.233:8006 {
        transport http {
            tls_insecure_skip_verify
        }
    }
}

klubnichka.proxmox.opa-oz.live {
    tls opaozhub@gmail.com {
        dns cloudflare {env.CLOUDFLARE_TOKEN}
        resolvers 1.1.1.1
    }

    reverse_proxy https://192.168.0.129:8006 {
        transport http {
            tls_insecure_skip_verify
        }
    }
}

malinka.proxmox.opa-oz.live {
    tls opaozhub@gmail.com {
        dns cloudflare {env.CLOUDFLARE_TOKEN}
        resolvers 1.1.1.1
    }

    reverse_proxy https://192.168.0.129:8006 {
        transport http {
            tls_insecure_skip_verify
        }
    }
}



---

    (source_file
      (comment)
      (comment)
      (comment)

      (server
        (address)
        (block

          (directive
            (keyword)
            (value)
            (block
              (comment)
              (directive
                (keyword)
                (value)
                (env))
              (directive
                (keyword)
                (ip_literal))))
          (directive
            (keyword)
            (value)
            (block
              (directive
                (keyword)
                (value)
                (block
                  (directive
                    (keyword))))))))
      (server
        (address)
        (block
          (directive
            (keyword)
            (value)
            (block
              (directive
                (keyword)
                (value)
                (env))
              (directive
                (keyword)
                (ip_literal))))
          (directive
            (keyword)
            (value)
            (block
              (directive
                (keyword)
                (value)
                (block
                  (directive
                    (keyword))))))))
      (server
        (address)
        (block
          (directive
            (keyword)
            (value)
            (block
              (directive
                (keyword)
                (value)
                (env))
              (directive
                (keyword)
                (ip_literal))))
          (directive
            (keyword)
            (value)
            (block
              (directive
                (keyword)
                (value)
                (block
                  (directive
                    (keyword))))))))
      (server
        (address)
        (block
          (directive
            (keyword)
            (value)
            (block
              (directive
                (keyword)
                (value)
                (env))
              (directive
                (keyword)
                (ip_literal))))
          (directive
            (keyword)
            (value)
            (block
              (directive
                (keyword)
                (value)
                (block
                  (directive
                    (keyword)))))))))
